--- a/package.json
+++ b/package.json
@@ -8,17 +8,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/titillium-web": "^0.1.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.7.1",
+    "@react-navigation/native": "^5.7.0",
+    "@types/styled-components": "^5.1.1",
     "expo": "~38.0.8",
+    "expo-font": "~8.2.1",
+    "expo-linear-gradient": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
+    "react-native-web": "~0.11.7",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "@types/react": "~16.9.41",
-    "@types/react-native": "~0.62.13",
+    "@types/react": "^16.9.43",
+    "@types/react-native": "^0.63.1",
     "typescript": "~3.9.5"
   },
   "private": true
