--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@babel/core": "^7.8.6",
     "@types/react": "^16.9.43",
     "@types/react-native": "^0.63.1",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "typescript-styled-plugin": "^0.15.0"
   },
   "private": true
 }
