--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.7.1",
     "@react-navigation/native": "^5.7.0",
+    "@types/react-native-svg-charts": "^5.0.3",
     "@types/styled-components": "^5.1.1",
     "expo": "~38.0.8",
     "expo-font": "~8.2.1",
@@ -26,6 +27,7 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-svg": "12.1.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.1.1"
   },
