--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@expo-google-fonts/titillium-web": "^0.1.0",
+    "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.7.1",
     "@react-navigation/native": "^5.7.0",
+    "@react-navigation/stack": "^5.9.0",
     "@types/react-native-svg-charts": "^5.0.3",
     "@types/styled-components": "^5.1.1",
     "expo": "~38.0.8",
