--- a/package.json
+++ b/package.json
@@ -9,36 +9,36 @@
   },
   "dependencies": {
     "@expo-google-fonts/titillium-web": "^0.1.0",
-    "@react-native-community/async-storage": "~1.11.0",
+    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "5.9.2",
+    "@react-native-community/netinfo": "5.9.6",
     "@react-navigation/bottom-tabs": "^5.7.1",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.9.0",
     "@types/react-native-svg-charts": "^5.0.3",
     "@types/styled-components": "^5.1.1",
-    "expo": "~38.0.8",
-    "expo-font": "~8.2.1",
-    "expo-linear-gradient": "~8.2.1",
-    "expo-status-bar": "^1.0.2",
+    "expo": "^39.0.0",
+    "expo-font": "~8.3.0",
+    "expo-linear-gradient": "~8.3.0",
+    "expo-status-bar": "~1.0.2",
     "lottie-react-native": "~2.6.1",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
     "react-native-svg": "12.1.0",
     "react-native-svg-charts": "^5.4.0",
-    "react-native-web": "~0.11.7",
+    "react-native-web": "~0.13.7",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "@types/react": "^16.9.43",
-    "@types/react-native": "^0.63.1",
-    "typescript": "~3.9.5",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
+    "typescript": "~3.9.2",
     "typescript-styled-plugin": "^0.15.0"
   },
   "private": true
