--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^5.9.0",
     "@types/react-native-svg-charts": "^5.0.3",
     "@types/styled-components": "^5.1.1",
+    "axios": "^0.20.0",
     "expo": "^39.0.0",
     "expo-font": "~8.3.0",
     "expo-linear-gradient": "~8.3.0",
@@ -34,7 +35,8 @@
     "react-native-svg": "12.1.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.13.7",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "use-debounce": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
