--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@testing-library/jest-native": "^3.4.3",
+    "@testing-library/react-hooks": "^3.4.2",
     "@testing-library/react-native": "^7.1.0",
     "@types/jest": "^26.0.15",
     "@types/react": "~16.9.35",
