--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "jest": {
     "preset": "jest-expo",
-    "setupFiles": [
-      "./src/setupTests.ts"
-    ],
     "setupFilesAfterEnv": [
       "@testing-library/jest-native/extend-expect"
     ],
+    "setupFiles": [
+      "./src/setupTests.ts"
+    ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*|@react-native-community/async-storage/lib|@react-native-community|react-native)"
     ],
     "collectCoverage": true,
     "collectCoverageFrom": [
