--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "@types/styled-components": "^5.1.4",
     "axios": "^0.20.0",
     "expo": "^39.0.0",
+    "expo-cli": "^3.28.6",
     "expo-font": "~8.3.0",
     "expo-linear-gradient": "~8.3.0",
     "expo-status-bar": "~1.0.2",
+    "global": "^4.4.0",
     "graphql": "^15.3.0",
     "lottie-react-native": "~2.6.1",
     "react": "16.13.1",
