--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/jest": "^26.0.15",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "axios-mock-adapter": "^1.19.0",
     "jest-expo": "^39.0.0",
     "jest-styled-components": "^7.0.3",
     "react-test-renderer": "^17.0.1",
