--- a/package.json
+++ b/package.json
@@ -33,32 +33,33 @@
     "@expo-google-fonts/titillium-web": "^0.1.0",
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "5.9.6",
+    "@react-native-community/netinfo": "5.9.7",
     "@react-navigation/bottom-tabs": "^5.10.4",
     "@react-navigation/native": "^5.8.4",
     "@react-navigation/stack": "^5.12.1",
     "axios": "^0.20.0",
-    "expo": "^39.0.0",
-    "expo-font": "~8.3.0",
-    "expo-linear-gradient": "~8.3.0",
-    "expo-status-bar": "~1.0.2",
+    "expo": "^40.0.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-font": "~8.4.0",
+    "expo-linear-gradient": "~8.4.0",
+    "expo-status-bar": "~1.0.3",
     "graphql": "^15.3.0",
     "lottie-react-native": "~2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
     "react-native-svg": "12.1.0",
     "react-native-svg-charts": "^5.4.0",
-    "react-native-web": "~0.13.7",
+    "react-native-web": "~0.13.12",
     "styled-components": "^5.1.1",
     "use-debounce": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "@babel/core": "~7.9.0",
     "@testing-library/jest-native": "^3.4.3",
     "@testing-library/react-hooks": "^3.4.2",
     "@testing-library/react-native": "^7.1.0",
@@ -68,10 +69,10 @@
     "@types/react-native-svg-charts": "^5.0.3",
     "@types/styled-components": "^5.1.4",
     "axios-mock-adapter": "^1.19.0",
-    "jest-expo": "^39.0.0",
+    "jest-expo": "^40.0.0",
     "jest-styled-components": "^7.0.3",
     "react-test-renderer": "^17.0.1",
-    "typescript": "~3.9.2",
+    "typescript": "~4.0.0",
     "typescript-styled-plugin": "^0.15.0"
   },
   "private": true
