--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll --coverage=false"
+    "test": "jest --watchAll --coverage=false",
+    "postinstall": "husky install"
   },
   "jest": {
     "preset": "jest-expo",
@@ -69,6 +70,7 @@
     "@types/react-native-svg-charts": "^5.0.3",
     "@types/styled-components": "^5.1.4",
     "axios-mock-adapter": "^1.19.0",
+    "husky": "^5.0.6",
     "jest-expo": "^40.0.0",
     "jest-styled-components": "^7.0.3",
     "react-test-renderer": "^17.0.1",
@@ -76,4 +78,5 @@
     "typescript-styled-plugin": "^0.15.0"
   },
   "private": true
+ 
 }
