--- a/package.json
+++ b/package.json
@@ -76,5 +76,11 @@
     "typescript": "~4.0.0",
     "typescript-styled-plugin": "^0.15.0"
   },
-  "private": true
+  "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn test",
+      "pre-push": "yarn test"
+    }
+  }
 }
