--- a/package.json
+++ b/package.json
@@ -79,8 +79,8 @@
   "private": true,
   "husky": {
     "hooks": {
-      "pre-commit": "yarn test",
-      "pre-push": "yarn test"
+      "pre-commit": "npm test",
+      "pre-push": "npm test"
     }
   }
 }
