--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/react-native-svg-charts": "^5.0.3",
     "@types/styled-components": "^5.1.4",
     "axios-mock-adapter": "^1.19.0",
+    "husky": "^4.3.6",
     "jest-expo": "^40.0.0",
     "jest-styled-components": "^7.0.3",
     "react-test-renderer": "^17.0.1",
